Update: Added list and form

--- a/Summative1/table.html
+++ b/Summative1/table.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Summative_1 UwU</title>
 </head>
 <body>
     <table border="1" width="1000px" align="center" cellspacing="0">
@@ -76,5 +76,28 @@
             <td>210</td>
         </tr>
     </table>
+
+    <form action="#">
+        <ul style="list-style: none; padding: 0%;">
+            <li>
+                <label for="name">Your Name*</label><br>
+                <input type="text" id="name" name="name" style="width: 350px"  required><br>
+            </li>
+            <li>
+                <label for="email">Email*</label><br>
+                <input type="text" id="email" name="email" style="width: 350px" required><br>
+            </li>
+            <li>
+                <label for="contact">Contact No.*</label><br>
+                <input type="text" id="contact" name="contact" style="width: 200px" required><br>
+            </li>
+            <li>
+                <label for="message">Message (optional):</label><br>
+                <textarea id="message" name="message" rows="4" cols="60"></textarea><br>
+            </li>
+            <li><i>Insert all required info*</i></li>
+            <input type="submit" value="Send">
+        </ul>
+    </form>
 </body>
 </html>
