--- a/Summative1/table.html
+++ b/Summative1/table.html
@@ -78,7 +78,7 @@
     </table>
 
     <form action="#">
-        <ul>
+        <ul style="list-style: none; padding: 0%;">
             <li>
                 <label for="name">Your Name*</label><br>
                 <input type="text" id="name" name="name" style="width: 350px"  required><br>
