May 31 2025 - Change feu submission form to feu registration

--- a/Formative3/registrationForm.html
+++ b/Formative3/registrationForm.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div  class="customHeader">
-        <h1 style="margin:0;">FEU SUBMISSION FORM</h1>
+        <h1 style="margin:0;">FEU REGISTRATION FORM</h1>
     </div>
 
     <div class="customBox">
