June 1 2025 - Updated UI - Updated info

--- a/Summative2/resume.html
+++ b/Summative2/resume.html
@@ -15,15 +15,18 @@
     <div class="row con-box">
         <div class="col">
             <div>
-                <img src="/assets/profilepic.jpg" alt="Profile Pic" style="width:75%;">
+                <img src="/assets/profilepic.jpg" alt="Profile Pic" class="con-pfp">
             </div>
         </div>
 
         <div class="col con-text-left">
             <div>
                 <h2>Deane Augustin D. Micutuan</h2>
-                <p>Metro Manila</p>
-                <p>San Anton Street</p>
+                <p>Metro Manila // San Anton Street</p>
+                <p><b>Age:</b> 19</p>
+                <p><b>BirthDay:</b> August 22, 2025</p>
+                <p><b>Sex:</b> Male</p>
+                <p><b>Status:</b> Single</p>
                 <p><b>Email:</b> deane4914@gmail.com</p>
                 <p><b>Telephone:</b> 0968 212 7338</p>
             </div>
@@ -31,27 +34,65 @@
 
         <div class="col con-text-right">
             <div>
-                <p><b>Categories</b></p>
-                <p>Amazing</p>
-                <p>Cool</p>
-                <p>Gamer</p>
-                <p>Artist</p>
+                <p><b>Hobbies</b><br>
+                    Coding<br>
+                    Drawing<br>
+                    Video editing<br>
+                    Bookbinding
+                </p>
             </div>
         </div>
     </div>
 
-    <!--Middle essay part-->
+        <!--Middle essay part-->
     <div class="row con-box con-text-left">
         <div class="col">
             <div>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi facilis voluptatum aperiam sunt, aliquid, atque dolorem placeat nam illum hic ullam, incidunt laborum earum? Voluptatem pariatur nihil quos unde quis.</p>
+                    For my resume website, I used basic web design principles to keep it clear and easy to read. I chose a dark background with light text to make the words stand out. I kept everything lined up neatly and grouped similar information together, like my contact details, skills, and education. I also used the same fonts and colors across the whole page to make it look clean and organized.
+                </p>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus corrupti corporis ratione vitae eligendi deleniti quaerat provident ipsa exercitationem beatae voluptas fugiat incidunt perspiciatis quos ipsam nostrum, assumenda, expedita totam!
+                    I also followed some modern web design trends. I put my photo and personal details at the top so people can quickly see who I am. I kept the design simple without too many colors or effects. I added a video and some links to make the page more interesting. I also made sure the layout works well on different screen sizes, like phones and computers.
                 </p>
             </div>
         </div>
+    </div>
+
+    <div class="row con-box">
+        <div class="col con-text-left">
+            <div>
+                <h3>Education</h3>
+                <ul>
+                    <li>St. Joseph College-Olongapo Senior Highschool Inc. (2022-2024)</li>
+                    <li>St. Joseph College-Olongapo Inc. (2018-2022)</li>
+                    <li>Little Angel Study Center (2012-2018)</li>
+                </ul>
+         </div>
         </div>
+
+        <div class="col con-text-left">
+            <div>
+                <h3>Experiences</h3>
+                <ul>
+                    <li>Work Immesion Orientation</li>
+                    <li>PISO Olongapo Seminar</li>
+                    <li>DSWD: Repackaging</li>
+                    <li>Safeguard voting</li>
+                </ul>
+         </div>
+        </div>
+
+        <div class="col con-text-left">
+            <div>
+                <h3>Skills</h3>
+                <ul>
+                    <li>Profficient in using Docs, Word, Excel, and Google Sheets</li>
+                    <li>Proficient in Krita</li>
+                    <li>Proficient in Canva</li>
+                </ul>
+         </div>
+        </div>
+    </div>
 
     <!--Bot part-->
     <div class="row con-box">
@@ -67,26 +108,32 @@
             </div>
         </div>
 
-        <div class="col">
+        <div class="col con-text-left">
             <div>
-                <a href="https://youtu.be/FUaaGInT_R8?si=e8dB1em5yba9buZ7">Freddy Fazbear</a>
-            </div>
+                <h3>Socials</h3>
+                <ul>
+                    <li>
+                        <a href="https://www.facebook.com/login/">Facebook</a>
+                    </li>
+                    <li>
+                        <a href="https://youtu.be/FUaaGInT_R8?si=e8dB1em5yba9buZ7">Freddy Fazbear</a>
+                    </li>
+                    <li>
+                        <a href="https://youtu.be/8SweBeusDSw?si=azt6pG_E7DBU_y2x">Bonnie the Bunny</a>
+                    </li>
+                    <li>
+                        <a href="https://youtu.be/fk4RoUBTL_Q?si=AepX652I7mN33eKe">Chica the Chicken</a>
+                    </li>
+                    <li>
+                        <a href="https://youtu.be/r11mz5jvHaU?si=ejhqop4yiu4YhOsP">Foxy the Pirate</a>
+                    </li>
 
-            <div>
-                <a href="https://youtu.be/8SweBeusDSw?si=azt6pG_E7DBU_y2x">Bonnie the Bunny</a>
-            </div>
-
-            <div>
-                <a href="https://youtu.be/fk4RoUBTL_Q?si=AepX652I7mN33eKe">Chica the Chicken</a>
-            </div>
-
-            <div>
-                <a href="https://youtu.be/r11mz5jvHaU?si=ejhqop4yiu4YhOsP">Foxy the Pirate</a>
+                </ul>
             </div>
 
         </div>
     </div>
-    </div>
+
 
     
 </body>
