June 16 2025: - change the name from "homepage.html" to "index.html" - change each title of each html within F5Formative

--- a/F5Formative/Eiron_internal.html
+++ b/F5Formative/Eiron_internal.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Eiron's Page</title>
     <style>
         body{
             background-image: url('/F5Formative/assets/HellBg.jpg');
@@ -35,7 +35,7 @@
     <h2 class="customText">Aaron Matthew Perido</h2>
     <p class="customText">Favorite:<br>Monster Hunter</p>
     <p class="customText">Core memory:<br>"Ok lang kahit masikip kasi hindi naman masakit"</p>
-    <a href="/F5Formative/homepage.html" class="customText">Return to homepage</a>
+    <a href="/F5Formative/index.html" class="customText">Return to homepage</a>
     </div>
 </body>
 </html>
