--- a/F5Formative/Benj_external.html
+++ b/F5Formative/Benj_external.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Benj's page</title>
     <link rel="stylesheet" href="/F5Formative/style.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
     <h2 class="customText">Benjamin Andrew P. Girron</h2>
     <p>Favorite:<br>K-pop</p>
     <p class="customText">Core memory:<br>Sleeping with the boys!!!</p>
-    <a href="/F5Formative/homepage.html" class="customText">Return to homepage</a>
+    <a href="/F5Formative/index.html" class="customText">Return to homepage</a>
     </div>
 </body>
 </html>
