--- a/F5Formative/Echo_inline.html
+++ b/F5Formative/Echo_inline.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Echo's Page</title>
 </head>
 <body style="background-image: url('/F5Formative/assets/bg.jpg'); background-repeat: no-repeat ;text-align: center; background-attachment: fixed; background-size: cover;">
     <div style="padding: 5% ;border: 5px solid white; background-color: rgba(154, 214, 249, 0.542); margin: 20%; margin-top: 3%;">
@@ -12,7 +12,7 @@
     <h2>Jericho Macarang</h2>
     <p>Favorite:<br>The Finals (Game)</p>
     <p>Core memory:<br>24 Chicken with the boys!!!</p>
-    <a href="/F5Formative/homepage.html">Return to homepage</a>
+    <a href="/F5Formative/index.html">Return to homepage</a>
     </div>
 </body>
 </html>
